--- a/paper/DA.tex
+++ b/paper/DA.tex
@@ -184,7 +184,7 @@
 ]{\inits{SES}\fnm{Stefan E} \snm{Seemann}}
 \author[
    addressref={aff1,aff2},
-]{\inits{XQ}\fnm{Xiu Cheng} \snm{Queck}}
+]{\inits{XQ}\fnm{Xiu Cheng} \snm{Quek}}
 \author[
    addressref={aff1,aff2},
 ]{\inits{JSM}\fnm{John S} \snm{Mattick}}
@@ -773,10 +773,13 @@ subjected to clustering with the \texttt{dbscan} 1.1-1 R package from Michael Ha
 
 \begin{backmatter}
 \section*{Availability of data and materials}
-Source code, pipelines and data can be obtained at \url{https://github.com/noncodo/BigRedButton} under an open-source GNU General Public License (GPL).
+Source code, pipelines, scripts and data are accessible through the BigRedButton GitHub repository \cite{dotaligner} under an open-source GNU General Public License (GPL).
 
 \section*{Competing interests}
  The authors declare that they have no competing interests.
+ 
+ \section*{Ethical approval}
+ No ethical approval was needed to perform this study. 
 
 \section*{Funding}
 MAS and JSM are partially supported  by a Cancer Council NSW project grant (RG 14-18). 
@@ -790,12 +793,17 @@ SES created and implemented \dotaligner{} source code.
 XQ assisted in \dotaligner{}  parameter optimisation and benchmarking. 
 
 \section*{Acknowledgements}
-We would like to thank DR Eva Maria Novoa Pardo for her scientific council, 
+We would like to thank Dr Eva Maria Novoa Pardo for her scientific council, 
 R programming tricks, and critical manuscript reading. 
 Thanks to Prof Oliver M\"ulhemann for discussions relating to data interpretation.  
 Thanks to Luis Renato Arriola-Martinez for his advice concerning covariance models. 
 Thanks to Michael Hahsler for developing and disseminating a fast DBSCAN R package.
 
+\section*{Additional files}
+
+\textit{Additional\_file\_1.pdf }--- Supplementary methods describing the \dotaligner{} implementation in detail, RNA structure clustering, and eCLIP data processing methodologies. \\
+
+\textit{Additional\_file\_2.pdf }--- Supplementary tables and figures with descriptions. \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%                  The Bibliography                       %%
@@ -947,21 +955,6 @@ An unannotated DKC1-bound sequence is marked with an asterix.
  \hline
  \end{tabular}
 \end{table}
-
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%                               
-%% Additional Files       
-%%                               
-\section*{Additional files}
-
- \subsection*{Additional file 1 --- Supplementary methods}
-
- Link to GitHub repository, detailed description of the \dotaligner{} implementation, RNA structure clustering, and eCLIP data processing. 
-
- \subsection*{Additional file 2 --- Supplementary tables and figures}
 
 \end{backmatter}
 
