--- a/paper/dotaligner.bib
+++ b/paper/dotaligner.bib
@@ -1,11 +1,19 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Martin Smith at 2017-11-25 21:34:08 +1100 
+%% Created for Martin Smith at 2017-11-25 23:12:28 +1100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+
+
+@article{dotaligner,
+        Author = {Smith, Martin S and Seemann, Stefan E},
+	Date-Added = {2017-11-25 11:51:40 +0000},
+	Date-Modified = {2017-11-25 12:12:23 +0000},
+	Doi = {10.5281/zenodo.1066258},
+	Title = {GitHub repository for DotAligner, including source code, pipelines, and data (BigRedButton)}}
 
 
 @article{smit2010repeatmodeler,
